# summitdemo

./: .gitignore  LICENSE  MIGRATION_SUMMARY.md  QUICK_START.md  QUICK_TEST_GUIDE.md  README.md  SETUP_INSTRUCTIONS.md  START_HERE.md  TESTING_GUIDE.md  check_setup.sh  render.yaml  requirements.txt  scrape.md  setup.py  start.sh
agent/: .env.example  .env.template  DEVELOPMENT.md  FRIEND_README.md  QUICK_START.md  README.md  READY.md  agent_tools.py  auth_server.py  config.py  db_client.py  main.py  pulpoo_api.py  pyproject.toml  pytest.ini  realtime_audio_client.py  realtime_server.py  requirements.txt  run.bat  run.sh  schemas.py  task_agent.py  test_deepgram_connection.py  test_flux_agent.py  test_pulpoo_connection.py  token_server.py  voice_agent.py  voice_server.py  web_scraper.py
agent/schemas/: __init__.py  appointment.py  content.py  conversation.py  supabase.py  user.py  web_scraper.py
agent/tests/: conftest.py  test_agent.py  test_pulpoo.py  test_web_scraper.py
server/: chat.html  index.html  input.html
supabase/: SETUP.sql
supabase/migrations/: 001_initial_schema.sql  002_rls_policies.sql  003_functions_and_views.sql  004_advanced_features.sql  005_useful_queries.sql
tests/: __init__.py  conftest.py  test_appointment_operations.py  test_db_connection.py  test_integration.py  test_message_operations.py  test_scraped_content_operations.py  test_session_operations.py  test_user_operations.py
webscrape/: web_crawling.py
