[project]
name = "pulpoo-voice-agent"
version = "0.1.0"
description = "Voice AI agent for creating tasks in Pulpoo using OpenAI Realtime API"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "pytz>=2023.3",
    "websockets>=12.0",
    "asyncio-mqtt>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
